--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-responsive": "^3.0.0",
     "ember-source": "~3.9.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^3.2.0",
