--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^5.0.0",
+    "ember-animated": "^0.11.0",
+    "ember-animated-tools": "^0.4.2",
     "ember-cli": "~3.9.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
