--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-responsive": "^4.0.2",
+    "ember-scroll-spy": "0.0.9",
     "ember-source": "~4.1.0",
     "ember-template-lint": "^3.15.0",
     "ember-truth-helpers": "^3.0.0",
